Spacing fixes

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -70,7 +70,7 @@ input[type='search']::-webkit-search-results-decoration {
 }
 
 .markdown p {
-    @apply py-1 mb-3;
+    @apply mb-3;
 }
 
 .markdown ol {
